samples/_failures_safe/1761477375_e12670_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd541bf7.c: In function ‘main’:
./samples/SAFE/__tmp_bd541bf7.c:121:39: error: missing terminating " character
  121 |         if ((i + 1) % 16 == 0) printf("\n
      |                                       ^~~
./samples/SAFE/__tmp_bd541bf7.c:121:9: error: expected expression at end of input
  121 |         if ((i + 1) % 16 == 0) printf("\n
      |         ^~
./samples/SAFE/__tmp_bd541bf7.c:121:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd541bf7.c:121:9: error: expected declaration or statement at end of input
